--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Takuya Matsuyama - Links</title>
+  <title>Bill Lau - Links</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="./index.css" />
-  <link rel="preload" href="./images/bg01.jpg" as="image" />
+  <link rel="preload" href="./images/bg.jpg" as="image" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
   <script>
@@ -42,47 +42,45 @@
   <div id="vanta"></div>
   <main class="animated">
     <header>
-      <img src="./images/takuya.jpg" />
-      <h1>@craftzdog</h1>
+      <img src="./images/bill_lau.jpg" />
+      <h1>@bill_lau</h1>
     </header>
     <ul>
       <li>
-        <a href="https://www.craftz.dog/">
+        <a href="https://www.yitianyigexiangfa.com">
           <img src="./images/homepage.svg" alt="Homepage" width="20" />
           Official Website
         </a>
       </li>
       <li>
-        <a href="https://store.craftz.dog/">
-          <img src="./images/wallpapers.svg" alt="Wallpapers" width="20" />
-          Wallpapers
+        <a href="https://www.xiaohongshu.com/user/profile/611d5997000000000101fdb1">
+          <img src="./images/xiaohongshu.svg" alt="XiaoHongShu" width="20" />
+          XiaoHongShu
         </a>
       </li>
       <li>
-        <a href="https://www.youtube.com/playlist?list=UU7yZ6keOGsvERMp2HaEbbXQ&index=1&playnext=1">
-          <img src="./images/youtube.svg" alt="YouTube" width="20" />
-          devaslife
+        <a href="https://x.com/liubeichixigua">
+          <img src="./images/x-logo.svg" alt="X" width="20" />
+          X
         </a>
       </li>
+
       <li>
-        <a href="https://www.youtube.com/playlist?list=PLFzcienOaLeMROdS1xgzPABodPZ4V4A0a&index=1&playnext=1">
-          <img src="./images/youtube.svg" alt="YouTube" width="20" />
-          Second channel
+        <a href="https://douyin.com/user/MS4wLjABAAAAH1v0x4-98PQ9i2-uGWvniQUM4F5AzC56rKAvLPOFb90">
+          <img src="./images/douyin.svg" alt="Douyin" width="20" />
+          Douyin
         </a>
-      </li>
       <li>
-        <a href="https://twitter.com/inkdrop_app">
-          <img src="./images/x-logo.svg" alt="X (Twitter)" width="20" />
-          X (Twitter)
-        </a>
-      </li>
-      <li>
-        <a href="https://github.com/craftzdog">
+        <a href="https://github.com/JavaProgrammerLB">
           <img src="./images/github.svg" alt="GitHub" width="20" />
           GitHub
         </a>
       </li>
     </ul>
+
+    <footer>
+      <p>Thanks <a href="https://www.craftz.dog/">Takuya Matsuyama</a></p>
+    </footer>
   </main>
 </body>
 
